# mpiManagedMemTest

./: .gitignore  CMakeLists.txt  README.md  mpiTest.cxx  nsysMPI.sh  rmaTest.cxx
